-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.2
-
None
-
macOS 12.6, MacBook Pro (16-inch, 2021)
-
-
24f5695d3 (dev), 8ff4f09b0 (6.5)
Using a Repeater in a ColumnLayout that dynamically updates the model while the Layout is resizing will lead to a crash. This is a regression since it works on Qt 6.3.1
A minimal example is the following:
import QtQuick import QtQuick.Layouts 1.15 Window { id: root visible: true ColumnLayout { id: mainColumnLayout anchors.fill: parent spacing: 1 Repeater { model: root.fittingCount Rectangle { implicitWidth: root.itemHeight implicitHeight: root.itemHeight color: "orange" } } Item { Layout.fillHeight: true } } readonly property int itemHeight: 40 property int fittingCount: 5 onHeightChanged: root.updateFittingCount() function updateFittingCount() { fittingCount = Math.random() * 5 } }
- covers
-
QTBUG-109471 Quick Layouts behaviour regression
-
- Closed
-
- is duplicated by
-
QTBUG-109327 Crash when using Pane in a complex layout
-
- Closed
-
- relates to
-
QTBUG-112976 InputPanel constructed with too small width makes some buttons too small
-
- Closed
-
For Gerrit Dashboard: QTBUG-111792 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
466886,4 | Do not crash if resizing a layout that got its child destroyed | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
471666,3 | Do not crash if resizing a layout that got its child destroyed | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |